--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
     
     <div class="container">
         <div class="product-header">
-            <h1 class="product-title">Joystick Microsoft Xbox Nueva Generación Carbon Black Color Negro Wireless Controller Series X|S</h1>
+            <h1 class="product-title">Joystick Ps5 Inalámbrico Sony PlayStation DualSense CFI-ZCT1W White/Black</h1>
             <div class="product-price">$ 129.999</div>
         </div>
         
